# route/userRoute.js
@@ -1,5 +1,5 @@
 
-import {SignIn,SignUp,ResetPassword,ForgotPassword,Validateopt,Logout,test, getAllusers,updateUser,findUserByName,deleteUser} from '../controller/usercontroller.js';
+import {SignIn,SignUp,ResetPassword,ForgotPassword,Validateopt,test, getAllusers,updateUser,findUserByName,deleteUser} from '../controller/usercontroller.js';
 import express from 'express';
 import { signUpValidation,signInValidation,otpValidation,resetPasswordValidation,forgotpasswordValidation, } from '../utils/validation.js';
 import {authenticateToken,authorize} from "../middleware/authethicateToken.js"
@@ -11,8 +11,7 @@ route.get('/listAll',getAllusers)
 route.post('/resetpassword',resetPasswordValidation,ResetPassword)
 route.post('/forgotpassword',forgotpasswordValidation,ForgotPassword)
 route.post('/verify',Validateopt)
-route.post('/logout',Logout)
 route.put('/updateByEmail',updateUser)
-route.delete('/delete/:id',deleteUser)
+route.delete('/deleteUser/:id',deleteUser)
 route.get('/search/:id',findUserByName)
 export default route;
